cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
project(MAPBOX_AUTO LANGUAGES CXX C)

set(CMAKE_CONFIGURATION_TYPES Debug Release RelWithDebInfo MinSizeRel)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

# Compiler configuration
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Required to avoid warnings when setting visibility
cmake_policy(SET CMP0063 NEW)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_C_VISIBILITY_PRESET hidden)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)

add_library(mbgl-core STATIC
    ${CMAKE_SOURCE_DIR}/include/mbgl/actor/actor.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/actor/actor_ref.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/actor/aspiring_actor.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/actor/established_actor.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/actor/mailbox.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/actor/message.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/actor/scheduler.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/annotation/annotation.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/background_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/circle_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/custom_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/fill_extrusion_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/fill_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/heatmap_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/hillshade_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/layer_manager.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/line_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/raster_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/layermanager/symbol_layer_factory.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/map/camera.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/map/change.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/map/map.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/map/map_observer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/map/mode.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/math/clamp.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/math/log2.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/math/minmax.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/math/wrap.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/platform/gl_functions.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/renderer/backend_scope.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/renderer/mode.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/renderer/query.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/renderer/renderer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/renderer/renderer_backend.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/renderer/renderer_frontend.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/renderer/renderer_observer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/renderer/renderer_state.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/storage/default_file_source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/storage/file_source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/storage/network_status.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/storage/offline.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/storage/online_file_source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/storage/resource.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/storage/resource_transform.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/storage/response.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/color_ramp_property_value.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/color_ramp_property_value.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/constant.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/coordinate.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/custom_geometry_source_options.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/filter.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/function.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/geojson.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/geojson_options.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/get_json_type.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/light.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/position.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/property_value.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/tileset.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion/transition_options.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/conversion_impl.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/assertion.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/at.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/boolean_operator.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/case.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/check_subtype.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/coalesce.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/coercion.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/collator.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/collator_expression.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/comparison.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/compound_expression.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/dsl.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/error.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/expression.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/find_zoom_curve.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/format_expression.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/formatted.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/get_covering_stops.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/interpolate.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/interpolator.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/is_constant.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/is_expression.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/length.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/let.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/literal.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/match.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/parsing_context.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/step.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/type.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/expression/value.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/filter.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/image.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/background_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/circle_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/custom_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/fill_extrusion_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/fill_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/heatmap_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/hillshade_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/layer.hpp.ejs
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/line_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/raster_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/layers/symbol_layer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/light.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/light.hpp.ejs
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/position.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/property_expression.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/property_value.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/sources/custom_geometry_source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/sources/geojson_source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/sources/image_source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/sources/raster_dem_source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/sources/raster_source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/sources/vector_source.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/style.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/transition_options.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/types.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/style/undefined.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/tile/tile_id.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/tile/tile_necessity.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/async_request.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/async_task.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/char_array_buffer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/chrono.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/color.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/compression.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/constants.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/convert.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/enum.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/event.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/exception.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/expected.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/feature.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/font_stack.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/geo.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/geojson.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/geometry.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/ignore.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/image.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/immutable.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/indexed_tuple.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/interpolate.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/logging.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/noncopyable.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/optional.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/peer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/platform.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/premultiply.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/projection.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/range.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/run_loop.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/size.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/string.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/thread.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/tileset.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/timer.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/traits.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/type_list.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/unitbezier.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/util.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/variant.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/work_request.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/work_task.hpp
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/work_task_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/csscolorparser/csscolorparser.cpp
    ${CMAKE_SOURCE_DIR}/src/csscolorparser/csscolorparser.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/actor/mailbox.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/actor/scheduler.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/algorithm/covered_by_children.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/algorithm/generate_clip_ids.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/algorithm/generate_clip_ids.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/algorithm/generate_clip_ids_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/algorithm/update_renderables.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/algorithm/update_tile_masks.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/annotation_manager.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/annotation_manager.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/annotation_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/annotation_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/annotation_tile.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/annotation_tile.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/fill_annotation_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/fill_annotation_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/line_annotation_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/line_annotation_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/render_annotation_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/render_annotation_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/shape_annotation_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/shape_annotation_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/symbol_annotation_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/annotation/symbol_annotation_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/geometry/anchor.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/geometry/debug_font_data.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/geometry/dem_data.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/geometry/dem_data.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/geometry/feature_index.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/geometry/feature_index.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/geometry/line_atlas.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/geometry/line_atlas.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/attribute.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/attribute.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/color_mode.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/color_mode.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/context.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/context.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/cull_face_mode.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/cull_face_mode.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/debugging.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/debugging.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/debugging_extension.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/debugging_extension.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/defines.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/depth_mode.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/depth_mode.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/draw_mode.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/extension.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/features.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/framebuffer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/index_buffer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/object.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/object.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/primitives.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/program_binary_extension.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/renderbuffer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/state.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/stencil_mode.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/stencil_mode.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/texture.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/types.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/uniform.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/uniform.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/value.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/value.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/vertex_array.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/vertex_array.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/vertex_array_extension.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/gl/vertex_buffer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/background_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/circle_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/custom_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/fill_extrusion_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/fill_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/heatmap_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/hillshade_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/layer_manager.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/line_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/raster_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layermanager/symbol_layer_factory.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/clip_lines.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/clip_lines.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/layout.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/merge_lines.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/merge_lines.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/pattern_layout.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/symbol_feature.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/symbol_instance.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/symbol_instance.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/symbol_layout.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/symbol_layout.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/symbol_projection.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/layout/symbol_projection.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/map/map.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/map/transform.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/map/transform.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/map/transform_state.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/map/transform_state.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/map/zoom_history.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/math/log2.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/platform/gl_functions.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/attributes.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/background_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/background_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/binary_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/binary_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/circle_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/circle_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/clipping_mask_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/collision_box_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/collision_box_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/debug_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/extrusion_texture_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/extrusion_texture_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/fill_extrusion_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/fill_extrusion_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/fill_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/fill_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/heatmap_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/heatmap_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/heatmap_texture_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/heatmap_texture_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/hillshade_prepare_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/hillshade_prepare_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/hillshade_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/hillshade_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/line_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/line_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/program_parameters.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/program_parameters.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/programs.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/programs.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/raster_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/raster_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/segment.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/symbol_program.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/symbol_program.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/programs/uniforms.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/backend_scope.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/bucket_parameters.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/bucket_parameters.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/circle_bucket.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/circle_bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/debug_bucket.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/debug_bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/fill_bucket.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/fill_bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/fill_extrusion_bucket.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/fill_extrusion_bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/heatmap_bucket.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/heatmap_bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/hillshade_bucket.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/hillshade_bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/line_bucket.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/line_bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/raster_bucket.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/raster_bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/symbol_bucket.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/buckets/symbol_bucket.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/cross_faded_property_evaluator.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/cross_faded_property_evaluator.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/data_driven_property_evaluator.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/group_by_layout.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/group_by_layout.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/image_atlas.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/image_atlas.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/image_manager.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/image_manager.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_background_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_background_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_circle_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_circle_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_custom_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_custom_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_fill_extrusion_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_fill_extrusion_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_fill_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_fill_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_heatmap_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_heatmap_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_hillshade_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_hillshade_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_layer_symbol_interface.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_line_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_line_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_raster_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_raster_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_symbol_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/layers/render_symbol_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/paint_parameters.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/paint_parameters.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/paint_property_binder.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/paint_property_statistics.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/possibly_evaluated_property_value.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/property_evaluation_parameters.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/property_evaluator.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_layer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_light.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_light.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_pass.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_source_observer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_static_data.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_static_data.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_tile.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/render_tile.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/renderer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/renderer_backend.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/renderer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/renderer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/renderer_state.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_custom_geometry_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_custom_geometry_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_geojson_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_geojson_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_image_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_image_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_raster_dem_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_raster_dem_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_raster_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_raster_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_vector_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/sources/render_vector_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/style_diff.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/style_diff.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/tile_mask.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/tile_parameters.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/tile_pyramid.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/tile_pyramid.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/transition_parameters.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/renderer/update_parameters.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/background.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/background.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/background_pattern.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/background_pattern.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/circle.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/circle.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/clipping_mask.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/clipping_mask.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/collision_box.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/collision_box.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/collision_circle.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/collision_circle.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/debug.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/debug.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/extrusion_texture.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/extrusion_texture.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_extrusion.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_extrusion.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_extrusion_pattern.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_extrusion_pattern.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_outline.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_outline.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_outline_pattern.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_outline_pattern.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_pattern.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/fill_pattern.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/heatmap.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/heatmap.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/heatmap_texture.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/heatmap_texture.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/hillshade.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/hillshade.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/hillshade_prepare.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/hillshade_prepare.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/line.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/line.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/line_gradient.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/line_gradient.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/line_pattern.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/line_pattern.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/line_sdf.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/line_sdf.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/preludes.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/preludes.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/raster.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/raster.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/shaders.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/shaders.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/symbol_icon.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/symbol_icon.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/symbol_sdf.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/shaders/symbol_sdf.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/sprite/sprite_loader.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/sprite/sprite_loader.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/sprite/sprite_loader_observer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/sprite/sprite_loader_worker.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/sprite/sprite_loader_worker.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/sprite/sprite_parser.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/sprite/sprite_parser.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/storage/asset_file_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/storage/http_file_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/storage/local_file_source.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/storage/network_status.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/storage/resource.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/storage/resource_transform.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/storage/response.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/collection.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/color_ramp_property_value.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/constant.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/coordinate.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/custom_geometry_source_options.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/filter.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/function.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/geojson.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/geojson_options.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/get_json_type.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/json.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/light.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/position.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/property_value.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/stringify.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/tileset.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/conversion/transition_options.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/custom_tile_loader.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/custom_tile_loader.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/assertion.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/at.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/boolean_operator.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/case.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/check_subtype.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/coalesce.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/coercion.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/collator_expression.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/comparison.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/compound_expression.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/dsl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/expression.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/find_zoom_curve.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/format_expression.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/formatted.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/get_covering_stops.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/interpolate.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/is_constant.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/is_expression.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/length.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/let.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/literal.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/match.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/parsing_context.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/step.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/util.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/util.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/expression/value.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/filter.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/image.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/image_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/image_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layer_observer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/background_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/background_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/background_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/background_layer_properties.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/background_layer_properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/circle_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/circle_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/circle_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/circle_layer_properties.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/circle_layer_properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/custom_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/custom_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/custom_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_extrusion_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_extrusion_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_extrusion_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_extrusion_layer_properties.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_extrusion_layer_properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_layer_properties.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/fill_layer_properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/heatmap_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/heatmap_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/heatmap_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/heatmap_layer_properties.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/heatmap_layer_properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/hillshade_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/hillshade_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/hillshade_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/hillshade_layer_properties.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/hillshade_layer_properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/layer.cpp.ejs
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/layer_properties.cpp.ejs
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/layer_properties.hpp.ejs
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/line_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/line_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/line_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/line_layer_properties.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/line_layer_properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/raster_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/raster_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/raster_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/raster_layer_properties.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/raster_layer_properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/symbol_layer.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/symbol_layer_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/symbol_layer_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/symbol_layer_properties.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layers/symbol_layer_properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/layout_property.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/light.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/light.cpp.ejs
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/light_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/light_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/light_observer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/observer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/paint_property.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/parser.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/parser.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/properties.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/rapidjson_conversion.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/source_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/source_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/source_observer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/custom_geometry_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/custom_geometry_source_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/custom_geometry_source_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/geojson_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/geojson_source_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/geojson_source_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/image_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/image_source_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/image_source_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/raster_dem_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/raster_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/raster_source_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/raster_source_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/vector_source.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/vector_source_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/sources/vector_source_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/style.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/style_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/style_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/style/types.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/bidi.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/check_max_angle.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/check_max_angle.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/collision_feature.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/collision_feature.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/collision_index.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/collision_index.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/cross_tile_symbol_index.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/cross_tile_symbol_index.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/get_anchors.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/get_anchors.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph_atlas.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph_atlas.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph_manager.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph_manager.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph_manager_observer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph_pbf.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph_pbf.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/glyph_range.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/language_tag.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/language_tag.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/local_glyph_rasterizer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/placement.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/placement.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/quads.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/quads.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/shaping.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/shaping.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/tagged_string.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/text/tagged_string.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/custom_geometry_tile.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/custom_geometry_tile.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/geojson_tile.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/geojson_tile.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/geojson_tile_data.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/geometry_tile.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/geometry_tile.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/geometry_tile_data.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/geometry_tile_data.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/geometry_tile_worker.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/geometry_tile_worker.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/raster_dem_tile.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/raster_dem_tile.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/raster_dem_tile_worker.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/raster_dem_tile_worker.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/raster_tile.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/raster_tile.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/raster_tile_worker.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/raster_tile_worker.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/tile.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/tile.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/tile_cache.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/tile_cache.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/tile_id_hash.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/tile_id_io.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/tile_loader.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/tile_loader_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/tile_observer.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/vector_tile.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/vector_tile.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/vector_tile_data.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/tile/vector_tile_data.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/chrono.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/clip_id.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/clip_id.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/color.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/compression.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/constants.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/convert.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/dtoa.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/dtoa.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/event.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/font_stack.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/geo.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/geojson_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/grid_index.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/grid_index.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/hash.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/http_header.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/http_header.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/http_timeout.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/http_timeout.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/i18n.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/i18n.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/interpolate.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/intersection_tests.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/intersection_tests.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/io.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/io.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/logging.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/longest_common_subsequence.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/mapbox.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/mapbox.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/mat2.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/mat2.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/mat3.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/mat3.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/mat4.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/mat4.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/math.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/offscreen_texture.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/offscreen_texture.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/premultiply.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/rapidjson.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/rapidjson.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/rect.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/std.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/stopwatch.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/stopwatch.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/string.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/thread_local.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/tile_coordinate.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/tile_cover.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/tile_cover.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/tile_cover_impl.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/tile_cover_impl.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/tile_range.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/tiny_sdf.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/tiny_sdf.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/token.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/url.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/url.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/utf.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/version.cpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/version.hpp
    ${CMAKE_SOURCE_DIR}/src/mbgl/util/work_request.cpp
    ${CMAKE_SOURCE_DIR}/src/parsedate/parsedate.cpp
    ${CMAKE_SOURCE_DIR}/src/parsedate/parsedate.hpp
)
